--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,76 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+@import url('https://fonts.googleapis.com/css2?family=Figtree&display=swap');
+@import url('https://fonts.cdnfonts.com/css/proxima-nova-2');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Proxima Nova', sans-serif;
+}
+.title {
+  margin-top: 1em;
+  margin-bottom: 0.25em;
+  font-weight: 750;
+}
+
+.title-big {
+  margin-top: 2em;
+  margin-bottom: 0.25em;
+  font-weight: 750;
+  font-size: 3em;
+}
+
+.paragraph {
+  font-size: medium;
+  font-weight: normal;
+  line-height: 180%;
+  margin-bottom: 0.25em;
+}
+
+.text-center {
   text-align: center;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: #1c1c1c;
+  color: #ffffff;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.center {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.button {
+  margin-top: 1.5em;
+  border: none;
+  cursor: pointer;
+  padding: 10px 17px 13px 17px;
+  background-color: #678fff;
+  color: white;
+  font-size: 0.9em;
+  font-weight: 550;
+  border-radius: 10px;
 }
 
-.card {
-  padding: 2em;
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1.5em;
+  margin-top: 1em;
 }
 
-.read-the-docs {
-  color: #888;
+.content-info__curve {
+  position: absolute;
+  top: 270px;
+  left: 0;
+  color: #58b792;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+}
+
+h5 {
+  margin-top: 1em;
 }
