--- a/src/App.css
+++ b/src/App.css
@@ -63,14 +63,64 @@ body {
 
 .content-info__curve {
   position: absolute;
-  top: 270px;
+  top: -250px;
   left: 0;
   color: #58b792;
   z-index: -1;
+  height: 2000px;
   width: 100%;
-  height: 100%;
 }
 
 h5 {
   margin-top: 1em;
+}
+
+.monster {
+  margin-top: -2em;
+}
+
+.real-sidebar {
+  background-color: #282828;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  right: -202px;
+  bottom: 0;
+  left: auto;
+  z-index: 200;
+  display: block;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  font-size: 100%;
+  vertical-align: baseline;
+  width: 202px;
+}
+
+.open {
+  right: 0;
+}
+
+/*TODO buscar y cambiar fuente*/
+.sidebar-close {
+  position: absolute;
+  top: 22px;
+  right: 16px;
+
+  font-family: 'Figtree', sans-serif;
+  font-style: normal;
+  color: #eeeeee;
+  font-size: 20px;
+  font-weight: 100;
+  cursor: pointer;
+  user-select: none;
+}
+
+.topbar {
+  padding-top: 2.4vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-right: 1em;
 }
